# tmmpr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  flake-lock.yml  release.yml
src/: app.rs  input.rs  lib.rs  main.rs  serialization.rs  ui.rs  utils.rs
src/graph/: connection.rs  constants.rs  geometry.rs  mod.rs  node.rs  viewport.rs
src/input/: handler.rs  mod.rs  settings.rs  start.rs
src/input/map/: delete.rs  edit.rs  helpers.rs  mod.rs  normal.rs  text_editing.rs  vim.rs  visual.rs
src/input/map/tests/: delete_tests.rs  edit_tests.rs  helpers_tests.rs  mod.rs  normal_tests.rs  text_editing_tests.rs  vim_tests.rs  (+1 more)
src/input/tests/: handler_tests.rs  mod.rs  settings_tests.rs  start_tests.rs
src/states/: map.rs  mod.rs  settings.rs  start.rs
src/states/map/: connection.rs  connections_state.rs  enums.rs  geometry.rs  mod.rs  note.rs  notes_state.rs  persistence.rs  state.rs  ui_state.rs  viewport.rs  visual_mode.rs
src/states/settings/: enums.rs  helpers.rs  io.rs  mod.rs  settings.rs  state.rs
src/states/start/: enums.rs  mod.rs  recent_paths.rs  state.rs
src/states/tests/: mod.rs  settings_tests.rs  start_tests.rs
src/tests/: mod.rs
src/ui/: constants.rs  mod.rs  settings.rs  start.rs
src/ui/map/: bar.rs  connections.rs  help.rs  mod.rs  notes.rs  screen.rs
src/utils/: backups.rs  colors.rs  file_io.rs  filesystem.rs  geometry.rs  map_files.rs  mod.rs  settings.rs
src/utils/tests/: backups_tests.rs  colors_tests.rs  geometry_tests.rs  map_files_tests.rs  mod.rs  settings_tests.rs
(+4 files in other folders)
