[package]
name = "tmmpr"
version = "0.1.0"
edition = "2024"
description = "terminal mind mapper"
license = "MIT"
repository = "https://github.com/tanciaku/tmmpr"
keywords = ["tui", "terminal", "ratatui", "mindmap", "mind-map"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
home = "0.5.12"
chrono = { version = "0.4.43", features = ["serde"] }
tempfile = "3.24.0"
